# waypane

./: 404.html  CHANGELOG.md  README.md  core_concepts.html  getting_started.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-9c9fadcc.js  styling.html  versions.json
.github/workflows/: docs.yml
crates/waypane/: Cargo.toml
crates/waypane-macros/: Cargo.toml
crates/waypane-macros/src/: lib.rs
crates/waypane/src/: cli.rs  main.rs
crates/waypane/src/dynamic/: commands.rs  mod.rs  signals.rs  state.rs
crates/waypane/src/lua/: mod.rs  types.rs
crates/waypane/src/modules/: backlight.rs  battery.rs  mod.rs
crates/waypane/src/modules/wm/hyprland/: mod.rs  monitors.rs  widgets.rs  windows.rs  workspaces.rs
crates/waypane/src/shell/: lifecycle.rs  style.rs
crates/waypane/src/widgets/: mod.rs  stack.rs
docs/: book.toml
docs/src/: SUMMARY.md  (+3 more)
examples/: bar.css  bar.lua  stubs.lua
latest/: getting_started.html  styling.html
lua_api/: globals.html  index.html  shell_windows.html  signals.html  state.html  timers.html
main/: 404.html  core_concepts.html  getting_started.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-04206f12.js  searchindex-323b3a0b.js  searchindex-6907e0ef.js  searchindex-78fa783e.js  searchindex-8616c1e7.js  searchindex-8beaac24.js  searchindex-a286ff21.js  searchindex-c38b850b.js  searchindex-dfd13190.js  searchindex-f86fa988.js  styling.html  toc-159f6911.js  toc-5f29bdba.js  toc-91c23d47.js  toc-d788510a.js  toc-fee3c0b1.js  toc.html
modules/: hyprland.html  index.html
v0.0.1-alpha.1/: core_concepts.html  searchindex-138c84c2.js
widgets/: button.html  common.html  container.html  icon.html  image.html  index.html  label.html  progress_bar.html  slider.html
(+44 files in other folders)
