[package]
name = "waypane-macros"
version = "0.0.1-alpha.1"
edition = "2024"
description = "Procedural macros for waypane"
license = "MIT"
repository = "https://github.com/semanavasco/waypane"
documentation = "https://docs.rs/waypane-macros"
keywords = ["macros", "wayland", "waypane"]
categories = ["development-tools::procedural-macro-helpers"]
rust-version = "1.88.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
