[package]
name = "waypane"
version = "0.0.1-alpha.1"
edition = "2024"
description = "A Wayland toolkit for building custom desktop widgets and bars in Lua"
license = "MIT"
repository = "https://github.com/semanavasco/waypane"
documentation = "https://semanavasco.com/waypane"
homepage = "https://semanavasco.com/waypane"
readme = "../../README.md"
keywords = ["wayland", "lua", "gtk4", "widgets", "unixporn"]
categories = ["command-line-utilities", "gui"]
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.101"
async-channel = "2.5.0"
clap = { version = "4.5.59", features = ["derive"] }
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
hyprland = { version = "0.4.0-beta.3", optional = true }
inventory = "0.3.22"
mlua = { version = "0.11.6", features = ["lua54", "send"] }
notify = { version = "8.2.0", optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
waypane-macros = { version = "0.0.1-alpha.1", path = "../waypane-macros" }
# waypane-macros = "0.0.1-alpha.1"

[features]
default = []

backlight = ["dep:notify"]
battery = ["dep:notify"]
hyprland = ["dep:hyprland"]
